--- a/configs/cycle_gan_base.yaml
+++ b/configs/cycle_gan_base.yaml
@@ -9,15 +9,35 @@ MODEL:
   DROPOUT: 0.5
 
 INPUT:
+  TYPE: 'image'
+  CHANNEL: 3
   SIZE: [224, 224]
+  GRAY_MEAN: [0.5]
+  GRAY_STD: [0.5]
   MEAN: [0.485, 0.456, 0.406]
   STD: [0.229, 0.224, 0.225]
   MODALITY: 'RGB'
+
+PROCESS:
+  GRAYSCALE: False
+  RESIZE: True
+  CROP: True
+  CROP_SIZE: None
+  FLIP: False
+  FLIP_P: None
+  TOTENSOR: True
+
+OUTPUT:
+  TYPE: 'image'
+  CHANNEL: 3
+  SIZE: [224, 224]
 
 DATASET:
   NAME: 'horse2zebra'
   TYPE: 'unaligned'
   ROOT_DIR: '/mnt/disk3/quyi/horse2zebra'
+  MAX_SIZE: float('inf')
+  DIRECTION: True
   
 DATALOADER:
   NUM_WORKERS: 8
