--- a/configs/cycle_gan_base.yaml
+++ b/configs/cycle_gan_base.yaml
@@ -50,6 +50,11 @@ DATALOADER:
 SOLVER:
   OPTIMIZER_NAME: "Adam"
   LR_SCHEDULER: 'linear'
+  BASE_LR: 0.0002
+  MAX_EPOCH: 400
+  LR_DECAY_EPOCH: 200
+  START_EPOCH: 0
+  INIT_LR_EPOCH: 200
 
 TRAIN:
   IS_TRAIN: True
