--- a/configs/cycle_gan_base.yaml
+++ b/configs/cycle_gan_base.yaml
@@ -54,7 +54,8 @@ SOLVER:
   MAX_EPOCH: 400
   LR_DECAY_EPOCH: 200
   START_EPOCH: 0
-  INIT_LR_EPOCH: 200
+  LR_INIT_EPOCH: 200
+  LR_DECAY_ITERS:  50
 
 TRAIN:
   IS_TRAIN: True
