--- a/configs/cycle_gan_base.yaml
+++ b/configs/cycle_gan_base.yaml
@@ -54,7 +54,8 @@ DATALOADER:
   BATCH_SIZE: 128
 
 SOLVER:
-  OPTIMIZER_NAME: "Adam"
+  OPTIM_NAME: "Adam"
+  OPTIM_BETA: 0.5
   LR_SCHEDULER: 'linear'
   BASE_LR: 0.0002
   MAX_EPOCH: 400
