--- a/configs/cycle_gan_base.yaml
+++ b/configs/cycle_gan_base.yaml
@@ -29,6 +29,7 @@ INPUT:
   STD: [0.229, 0.224, 0.225]
   MODALITY: 'RGB'
   DIRECTION: True
+  POOL_SIZE: 50
 
 PROCESS:
   RESIZE: True
@@ -58,13 +59,15 @@ SOLVER:
   OPTIM_BETA: 0.5
   LR_SCHEDULER: 'linear'
   BASE_LR: 0.0002
-  MAX_EPOCH: 400
+  # lr_init_epoch + lr_decay_epoch = max_epoch
   LR_DECAY_EPOCH: 200
-  START_EPOCH: 0
   LR_INIT_EPOCH: 200
   LR_DECAY_ITERS:  50
 
 TRAIN:
+  START_EPOCH: 1
+  MAX_EPOCH: 400
+  ADD_EPOCH: 0
   IS_TRAIN: True
 
 TEST:
