--- a/configs/conditional_gan_base.yaml
+++ b/configs/conditional_gan_base.yaml
@@ -1,18 +1,18 @@
 TASK_NAME: 'image_style_transform'
 
 MODEL:
-  NAME: 'cycle_gan'
+  NAME: 'conditional_gan'
   DEVICE: 'cuda'
   DEVICE_IDS: [0, 1]
   SEED: 1
   PRETRAINED: False
   PRETRAIN_PATH: ''
-  DROPOUT: 0
+  DROPOUT: 0.5
   NORM_TYPE: 'batch'
   INIT_TYPE: 'normal'
   INIT_GAIN: 0.02
   CONSIST: 
-    G: 'resnet_9blocks'
+    G: 'unet_256'
     D: 3
 
 LOSS:
@@ -20,23 +20,24 @@ LOSS:
   LAMBDA_A: 10
   LAMBDA_B: 10
   LAMBDA_IDENTITY: 0.5
+  LAMBDA_L1: 100.0
 
 INPUT:
   TYPE: 'image'
   CHANNEL: 3
-  SIZE: [256, 256]
+  SIZE: [286, 286]
   GRAY_MEAN: [0.5]
   GRAY_STD: [0.5]
   MEAN: [0.485, 0.456, 0.406]
   STD: [0.229, 0.224, 0.225]
   MODALITY: 'RGB'
-  DIRECTION: True
+  DIRECTION: False
   POOL_SIZE: 50
 
 PROCESS:
   RESIZE: True
   CROP: True
-  CROP_SIZE: [224, 224]
+  CROP_SIZE: [256, 256]
   FLIP: False
   FLIP_P: 0.5
   TOTENSOR: True
@@ -47,9 +48,9 @@ OUTPUT:
   SIZE: [224, 224]
 
 DATASET:
-  NAME: 'horse2zebra'
-  TYPE: 'unaligned'
-  ROOT_DIR: '/mnt/disk3/quyi/data/horse2zebra'
+  NAME: 'facades'
+  TYPE: 'aligned'
+  ROOT_DIR: '/mnt/disk3/quyi/data/facades'
   MAX_SIZE: 'inf'
   
 DATALOADER:
