--- a/configs/conditional_gan_base.yaml
+++ b/configs/conditional_gan_base.yaml
@@ -8,8 +8,8 @@ MODEL:
   PRETRAINED: False
   PRETRAIN_PATH: ''
   DROPOUT: 0.5
-  NORM_TYPE: 'batch'
-  INIT_TYPE: 'normal'
+  NORM: 'batch'
+  INIT: 'normal'
   INIT_GAIN: 0.02
   CONSIST: 
     G: 'unet_256'
@@ -31,7 +31,7 @@ INPUT:
   MEAN: [0.485, 0.456, 0.406]
   STD: [0.229, 0.224, 0.225]
   MODALITY: 'RGB'
-  DIRECTION: False
+  DIRECTION: True
   POOL_SIZE: 50
 
 PROCESS:
