--- a/configs/cycle_gan_base.yaml
+++ b/configs/cycle_gan_base.yaml
@@ -3,11 +3,11 @@ TASK_NAME: 'image_style_transform'
 MODEL:
   NAME: 'cycle_gan'
   DEVICE: 'cuda'
-  DEVICE_IDS: [0, 1]
+  DEVICE_IDS: [1]
   SEED: 1
   PRETRAINED: False
   PRETRAIN_PATH: ''
-  DROPOUT: 0
+  DROPOUT: 0.
   NORM: 'batch'
   INIT: 'normal'
   INIT_GAIN: 0.02
